[project]
name = "shopping-ai-env"
version = "0.1.0"
description = "AI-powered shopping environment for OpenEnv evaluation"
authors = [{ name = "Jaanvi Kapoor" }]

dependencies = [
  "fastapi",
  "uvicorn",
  "openai",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
